fix to event spacing

--- a/src/modules/EventListing.scss
+++ b/src/modules/EventListing.scss
@@ -46,7 +46,7 @@
 
     .event {
       display: flex;
-      margin-top: 25px;
+      margin-bottom: 65px;
 
       .event-image {
         width: 50%;
